--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,84 @@
-.container {
-    background-color: #c00025;
-    width: 100%;
-    max-width: 550px;
+
+.container{
+    padding: 34px 21px;
+    background: #BB1233;
+    width: 32.8%;
+    margin: 0 auto;
     border-radius: 15px;
-    border: 2px solid grey;
-    padding-bottom: 25px;
-}
-.display {
-    margin-top: 25px;
-    height: 100px;
-    width: 450px;
-    border-radius: 50px;
-    color: white;
-    background-color: #322c2d;
-    box-shadow: 1px 1px #322c2d;
-    display: flex;
-    justify-content: flex-end;
-    align-items: flex-end;
-    padding-right: 8%;
-    font-size: 5.0rem;
   }
+  .logo{
+    max-width: 120px;
+    margin-left: 14px;
+    margin-bottom: 12px;
+  }
+
+.display{
+    background: #2D2829;
+    height: 100px;
+    width: 94%;
+    border-radius: 50px;
+    margin: 0 auto;
+    margin-bottom: 21px;
+    color: #FFF;
+    text-align: right;
+    padding: 10px;
+  }
+
+  .App{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+  }
+
+  .btn {
+    width: 80px;
+    margin: 10px 13.13px;
+    padding: 21px 10px;
+    border-radius: 50px;
+    box-shadow: 0px 4px #420208;
+    color: #FFF;
+    border: none;
+    font-size: 32px;
+  }
+
+  .btn:nth-child(10){
+    width: 210px;
+    border-radius: 40px;
+    margin-right: 6px;
+  }
+
+  .Numbers-Btn{
+    background: #113C78;
+  }
+  .Specials-Btn{
+    background: #2160B0;
+  }
+  .Operators-Btn{
+    background: #3DB5E5;
+  }
+
+  .left{
+    display: flex;
+    flex-wrap: wrap;
+    align-items: flex-start;
+  }
+  .right{
+    display: flex;
+  }
+
+  .numbers {
+      display: flex;
+      flex-direction: row;
+      flex-wrap: wrap;
+      text-align: center;
+  }
+
+  .specials {
+    display: flex;
+    flex-direction: row;
+    text-align: center;
+}
+
+.operator {
+    text-align: center;
+}
